# smartCar

./: .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  partitions.csv  platformio.ini  sdkconfig  sdkconfig.old
components/Wifi/: CMakeLists.txt  Kconfig.projbuild  Wifi.c  idf_component.yml
components/Wifi/include/: Wifi.h
components/l298n_motor/: CMakeLists.txt  l298n_motor.c
components/l298n_motor/include/: l298n_motor.h
components/servo/: CMakeLists.txt  servo.c
components/servo/include/: servo.h
include/: Config.h  WifiHandler.h
main/: CMakeLists.txt  Config.h  Kconfig.projbuild  Wifi.c  Wifi.h  captive_portal.html  idf_component.yml  led_states.h  main.c  wifi_sta_handlers.c  wifi_sta_handlers.h
src/: WifiHandler.cpp  main.cpp
webpage/: PID_calibrate.html  calibrate.html  common.js  comon.js  control.html  index.html  nav.html  status.html  styles.css  ws.js
website/: control.html  index.html  status.html  styles.css
